# pushable

./: .gitignore  CHANGELOG.md  Justfile  Makefile  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml  pre-release.yml  release.yml
docs/: conf.py  index.rst  modules.rst  pushable.rst  requirements.txt
scripts/: extract-release-notes.sh  pre-release-check.sh
src/pushable/: __init__.py  pushable.py
tests/: test_pushable.py
