[tool.poetry]
name = "pushable"
version = "0.1.1"
description = "Convert iterators into peekable, pushable iterators"
authors = ["Stephen Leach <sfkleach@gmail.com>"]
license = "GPL-3.0-or-later"
readme="README.md"
homepage="https://pushable.readthedocs.io/en/latest/"
documentation="https://pushable.readthedocs.io/en/latest/"
repository = "https://github.com/sfkleach/pushable"
keywords = ["iterators", "pushable", "peekable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
