[project]
name = "pushable"
version = "0.1.9"
description = "Convert iterators into peekable, pushable iterators"
authors = [{name = "Stephen Leach", email = "sfkleach@gmail.com"}]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["iterators", "pushable", "peekable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://pushable.readthedocs.io/en/latest/"
Documentation = "https://pushable.readthedocs.io/en/latest/"
Repository = "https://github.com/sfkleach/pushable"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "mypy>=2.1.0",
    "Sphinx>=9.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pushable"]
